--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/jost": "^4.5.6",
     "@fontsource/sen": "^4.5.3",
     "@types/node": "^17.0.22",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^0.26.1",
     "next": "12.1.4",
     "next-seo": "^4.29.0",
